tests/baselines/reference/structConstructorParametersAccessibility_basic.errors.txt
tests/cases/conformance/basicStructs/constructorDeclarations_basic/structConstructorParametersAccessibility_basic.ts(12,1): error TS8010: Property 'p' is private and only accessible within struct 'C2'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/structConstructorParametersAccessibility_basic.ts(19,1): error TS8011: Property 'p' is protected and only accessible within struct 'C3' and its substructs.


==== tests/cases/conformance/basicStructs/constructorDeclarations_basic/structConstructorParametersAccessibility_basic.ts (2 errors) ====
    struct C1 {
        constructor(public x: number) { }
    }
    var c1: C1;
    c1.x // OK
    
    
    struct C2 {
        constructor(private p: number) { }
    }
    var c2: C2;
    c2.p // private, error
    ~~~~
!!! error TS8010: Property 'p' is private and only accessible within struct 'C2'.
    
    
    struct C3 {
        constructor(protected p: number) { }
    }
    var c3: C3;
    c3.p // protected, error
    ~~~~
!!! error TS8011: Property 'p' is protected and only accessible within struct 'C3' and its substructs.
    
    